--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.html
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.html
@@ -1,2 +1,58 @@
-<h4>direct messages room</h4>
+<mat-card class="main-chat-container" layot="column">
+  <mat-card-header class="main-chat__header">
+    <!--<span class="main-chat__header-text">Chat has {{mainChatRoom?.users.length}} users, online {{mainChatRoom?.activeUsers.length}}</span>-->
+    <img mat-card-avatar class="direct-messages-room__user-avatar" [src]="user?.avatar || ''">
+    <mat-card-title class="direct-messages-room__user-name">{{user?.firstName}} {{user?.lastName}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div #messageList class="message-list">
+
+      <div class="message-list-content">
+
+        <div #messageListItem class="message-list-item" *ngFor="let message of messages"
+             [ngClass]="getClassOfMessageList(message, user)">
+
+          <p mat-line class="action-line" *ngIf="message.action === 'joined'">
+            {{message.messageContent}}
+          </p>
+
+          <p mat-line class="action-line" *ngIf="message.action === 'edit'">
+            {{message.messageContent}}
+          </p>
+
+          <img mat-card-avatar [src]="message.user.avatar"
+               *ngIf="message.action === 'sentMessage' && message.user.id !== user.id"
+               class="message-list-item__avatar" routerLink="../user-profile"
+               [queryParams]="currentUserOfAvatar(message.user)" [skipLocationChange]="true">
+
+
+          <h3 mat-line class="message-item-user-name"
+              *ngIf="message.action === 'sentMessage' && message.user.id !== user.id" class="message-list-item-title">
+            {{message.user.firstName}} {{message.user.lastName}}
+          </h3>
+
+          <p class="mat-list-item-message" *ngIf="message.action === 'sentMessage'">
+            {{message.messageContent}}
+          </p>
+
+          <span class="message-item-time" *ngIf="message.action === 'sentMessage'">{{message.sendingTime | date: 'h:mma' | lowercase}}</span>
+
+        </div>
+
+      </div>
+
+    </div>
+  </mat-card-content>
+  <mat-card-footer class="main-chat-container-footer">
+    <mat-icon>create</mat-icon>
+    <mat-form-field class="message-input">
+      <mat-label>Type a message</mat-label>
+      <textarea matInput mat-autosize (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent"
+                autofocus autocomplete="off"></textarea>
+    </mat-form-field>
+  </mat-card-footer>
+</mat-card>
+<mat-card class="main-chat-container" layot="column" *ngIf="!user.action.joined">
+  <button mat-button class="join-button" (click)="onJoin()">Join</button>
+</mat-card>
 
